# elecciones_online

./: .coverage  .env  .gitignore  README.md  alembic.ini  coverage.xml  performance_Jmeter.jmx  pyproject.toml  requirements  requirements.txt
alembic/: env.py
alembic/versions/: 3ef8261cadf9_modifying_table_person_adding_to_it_the_.py  522041c7ddb6_adding_values_to_tables.py  7fd94f41ee94_adding_lista_candidato_table_and_.py  8bc15a196b47_new_initial_configuration_database.py  8c59b332e9bc_adding_table_persona_candidato_elector.py  a444fc7367bf_adding_2_keys.py  c7bc3e296eda_init_database.py  cf9e60ce5288_update_administrador_id_fk.py  d1cd7e4f2a19_deleting_votes_table.py  e8168f0b5535_adding_table_vote.py  eedbf7de024a_adding_relationship_between_list_and_it_.py  eefac2527e18_modifying_post_foreign_key.py  fe6a74fec1c5_adding_vote_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: admin.py  auth.py  candidato.py  eleccion.py  elector.py  lista.py  voto.py
tests/: conftest.py  selenium_test.py  test_candidates.py  test_elections.py  test_elector.py  test_listas.py
