[tool.poetry]
name = "poetry add fastapi uvicorn[standard]"
version = "0.1.0"
description = "package standar principal fastapi"
authors = ["Chuancao26"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
alembic = "^1.13.3"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pyjwt = "^2.9.0"
sqlalchemy = "^2.0.35"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.5.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
