[tool.poetry]
name = "app"
version = "0.1.0"
description = "Este es un proyecto para el curso de Ingeniería de Software II. Sistema de votación online."
authors = [
  "Arleen Maritza Ferro Vasquez <aferro@unsa.edu.pe>",
  "Wilson Isaac Mamani Casilla <wmamani@unsa.edu.pe>",
  "Jazmin Gabriela Perez Villasante <jperez@unsa.edu.pe>",
  "Cristhian David Huanca Olazabal <chuancao@unsa.edu.pe>",
  "Sebastian Andres Mendoza Fernandez <smendoza@unsa.edu.pe>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
alembic = "^1.13.3"
pydantic-settings = "^2.5.2"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
pyjwt = "^2.9.0"
pytest = "^8.3.3"
setuptools = "^75.3.0"
bcrypt = "^4.2.0"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
coverage = "^7.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
